--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.css
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.css
@@ -1,13 +1,26 @@
-.about-container {
-    height: calc(100vh - 64px);
+.about {
+ }
+
+.about__card {
+    background-color: #fff;
 }
 
-.about-card {
+.about__content {
+    background-color: #fafafa;
 }
 
-.about-right-container {
-}
+@media screen and (min-width: 481px) {
+    .about {
+        display: flex;
+        min-height: calc(100vh - 64px);
+    }
 
-.about-left-container {
-    width: 30%;
+    .about__card {
+        border-right: solid 1px rgba(0,0,0,.12);
+        width: 30%;
+    }
+
+    .about__content {
+        width: 70%;
+    }
 }
