--- a/music-cloud-web/src/main/web/src/app/components/registration/registration.component.css
+++ b/music-cloud-web/src/main/web/src/app/components/registration/registration.component.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     height: calc(100vh - 64px);
+    text-align: center;
 }
 
 .registration-form {
