--- a/music-cloud-web/src/main/web/src/app/components/users/users.component.css
+++ b/music-cloud-web/src/main/web/src/app/components/users/users.component.css
@@ -2,12 +2,31 @@
     height: calc(100vh - 64px);
 }
 
-.right-container {
+.users {
+ }
 
+.users__filter {
+    background-color: #fff;
 }
 
-.left-container {
-    width: 30%;
+.users__content {
+    background-color: #fafafa;
+}
+
+@media screen and (min-width: 481px) {
+    .users {
+        display: flex;
+        min-height: calc(100vh - 64px);
+    }
+
+    .users__filter {
+        border-right: solid 1px rgba(0,0,0,.12);
+        width: 30%;
+    }
+
+    .users__content {
+        width: 70%;
+    }
 }
 
 .user-filter-text-input {
