--- a/music-cloud-web/src/main/web/src/app/components/users/users.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/users/users.component.html
@@ -1,31 +1,40 @@
-<mat-sidenav-container class="user-container">
-  <mat-sidenav mode="side" class="left-container" opened>
-    <p class="user-filter-label">Фильтры</p>
-    <div>
-      <mat-form-field class="user-filter-text-input" appearance="outline">
-        <mat-label>Имя</mat-label>
-        <input matInput placeholder="Введите имя пользователя">
-      </mat-form-field>
-    </div>
-    <div>
-      <mat-form-field class="user-filter-text-input" appearance="outline">
-        <mat-label>Фамилия</mat-label>
-        <input matInput placeholder="Введите фамилию пользователя">
-      </mat-form-field>
-    </div>
-    <div>
-      <mat-form-field class="user-filter-text-input" appearance="outline">
-        <mat-label>Никнейм</mat-label>
-        <input matInput placeholder="Введите никнейм пользователя">
-      </mat-form-field>
-    </div>
-    <div>
-      <button class="user-filter-search-button" mat-raised-button color="primary">Поиск</button>
-      <button class="user-filter-search-button" mat-raised-button color="warn">Сброс фильтров</button>
-    </div>
-  </mat-sidenav>
-  <mat-sidenav-content class="right-container">
-    <h3 mat-subheader class="header-label">Пользователи</h3>
+<div class="users">
+  <div class="users__filter">
+    <mat-accordion>
+      <mat-expansion-panel [expanded]="!shared.isMobile()">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Фильтры
+          </mat-panel-title>
+          <mat-panel-description>
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <div>
+          <mat-form-field class="user-filter-text-input" appearance="outline">
+            <mat-label>Имя</mat-label>
+            <input matInput placeholder="Введите имя пользователя">
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field class="user-filter-text-input" appearance="outline">
+            <mat-label>Фамилия</mat-label>
+            <input matInput placeholder="Введите фамилию пользователя">
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field class="user-filter-text-input" appearance="outline">
+            <mat-label>Никнейм</mat-label>
+            <input matInput placeholder="Введите никнейм пользователя">
+          </mat-form-field>
+        </div>
+        <div>
+          <button class="user-filter-search-button" mat-raised-button color="primary">Поиск</button>
+          <button class="user-filter-search-button" mat-raised-button color="warn">Сброс фильтров</button>
+        </div>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </div>
+  <div class="users__content">
     <mat-list>
       <mat-paginator [length]="usersLength"
                      [pageIndex]="page"
@@ -42,5 +51,5 @@
       </mat-list-item>
     </mat-list>
     <span *ngIf="users.length === 0">На данный момент в системе отсутствуют пользователи</span>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+  </div>
+</div>
