nav panel and user profile page were fixed

--- a/music-cloud-web/src/main/web/src/app/app.component.css
+++ b/music-cloud-web/src/main/web/src/app/app.component.css
@@ -1,10 +1,10 @@
 .app-img {
-    height: 64px;
+    height: 56px;
 }
 
 .app-title {
     padding: 10px 10px;
-    color: black;
+    color: white;
 }
 
 .header-control-panel {
