--- a/music-cloud-web/src/main/web/src/app/components/user-profile/user-profile.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/user-profile/user-profile.component.html
@@ -1,5 +1,5 @@
-<mat-sidenav-container class="home-container">
-  <mat-sidenav mode="side" class="left-container" opened>
+<div class="home">
+  <div class="home__card">
     <mat-card class="user-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
@@ -17,8 +17,8 @@
         <p>О пользователе: {{user.userDetails.about}}</p>
       </mat-card-content>
     </mat-card>
-  </mat-sidenav>
-  <mat-sidenav-content class="right-container">
+  </div>
+  <div class="home__content">
     <mat-list>
       <mat-tab-group>
         <mat-tab label="Музыка пользователя">
@@ -52,7 +52,7 @@
         </mat-tab>
       </mat-tab-group>
     </mat-list>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+  </div>
+</div>
 
 
