--- a/music-cloud-web/src/main/web/src/app/components/music/music.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/music/music.component.html
@@ -39,7 +39,7 @@
                         <input matInput placeholder="Введите название плейлиста">
                     </mat-form-field>
                 </div>
-                <div>
+                <div class="filter-buttons">
                     <button class="music-filter-search-button" mat-raised-button color="primary">Поиск</button>
                     <button class="music-filter-search-button" mat-raised-button color="warn">Сброс фильтров</button>
                 </div>
@@ -55,43 +55,45 @@
                            [pageSizeOptions]="pageSizeOptions"
                            (page)="pageEvent = loadTracksList($event)">
             </mat-paginator>
-            <mat-list-item *ngFor="let track of tracks" class="track-item">
-                <h4 mat-line class="track-item-control">
-                    <audio controls *ngFor="let file of track.files | async" class="audio-player">
-                        <source src={{file}} type="audio/mpeg">
-                        <p>Ваш браузер не поддерживает HTML5 audio. Воспользуйтесь
-                            <a href={{file}}>этой ссыклой</a></p>
-                    </audio>
-                </h4>
-                <div mat-line class="track-title">
-                    <div>
-                        {{track.title + ", " + track.artist + ", " + track.year}}
+            <ul *ngFor="let track of tracks" class="track-list">
+                <li class="track-item">
+                    <h4 mat-line>
+                        <audio controls *ngFor="let file of track.files | async" class="audio-player">
+                            <source src={{file}} type="audio/mpeg">
+                            <p>Ваш браузер не поддерживает HTML5 audio. Воспользуйтесь
+                                <a href={{file}}>этой ссыклой</a></p>
+                        </audio>
+                    </h4>
+                    <div mat-line class="track-title">
+                        <div class="track__info">
+                            {{track.title + ", " + track.artist + ", " + track.year}}
+                        </div>
+                        <div class="track__control">
+                            <mat-icon class="item" mat-list-icon (click)="addTrackToUser(track.id)">add_circle_outline
+                            </mat-icon>
+                            <mat-icon class="item" mat-list-icon (click)="changeTrack(track)">create</mat-icon>
+                            <mat-icon class="item" mat-list-icon (click)="deleteTrack(track)">clear</mat-icon>
+                            <mat-form-field class="item rate">
+                                <mat-label>Ваша оценка</mat-label>
+                                <mat-select [(ngModel)]="track.tempRating" (selectionChange)="rateTrack(track)">
+                                    <mat-option>None</mat-option>
+                                    <mat-option value="1">1</mat-option>
+                                    <mat-option value="2">2</mat-option>
+                                    <mat-option value="3">3</mat-option>
+                                    <mat-option value="4">4</mat-option>
+                                    <mat-option value="5">5</mat-option>
+                                    <mat-option value="6">6</mat-option>
+                                    <mat-option value="7">7</mat-option>
+                                    <mat-option value="8">8</mat-option>
+                                    <mat-option value="9">9</mat-option>
+                                    <mat-option value="10">10</mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                            <span class="item">Рейтинг: <b>{{track.rating}}</b></span>
+                        </div>
                     </div>
-                    <div>
-                        <mat-icon class="item" mat-list-icon (click)="addTrackToUser(track.id)">add_circle_outline
-                        </mat-icon>
-                        <mat-icon class="item" mat-list-icon (click)="changeTrack(track)">create</mat-icon>
-                        <mat-icon class="item" mat-list-icon (click)="deleteTrack(track)">clear</mat-icon>
-                        <mat-form-field class="item rate">
-                            <mat-label>Ваша оценка</mat-label>
-                            <mat-select [(ngModel)]="track.tempRating" (selectionChange)="rateTrack(track)">
-                                <mat-option>None</mat-option>
-                                <mat-option value="1">1</mat-option>
-                                <mat-option value="2">2</mat-option>
-                                <mat-option value="3">3</mat-option>
-                                <mat-option value="4">4</mat-option>
-                                <mat-option value="5">5</mat-option>
-                                <mat-option value="6">6</mat-option>
-                                <mat-option value="7">7</mat-option>
-                                <mat-option value="8">8</mat-option>
-                                <mat-option value="9">9</mat-option>
-                                <mat-option value="10">10</mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                        <span class="item">Рейтинг: <b>{{track.rating}}</b></span>
-                    </div>
-                </div>
-            </mat-list-item>
+                </li>
+            </ul>
         </mat-list>
         <span *ngIf="tracks.length === 0">На данный момент в системе отсутствуют музыкальные композиции</span>
     </div>
