--- a/music-cloud-web/src/main/web/src/app/components/user-profile/user-profile.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/user-profile/user-profile.component.html
@@ -30,23 +30,25 @@
                            (page)="pageEvent = loadTracksList($event)"
                            *ngIf="music.length !== 0">
             </mat-paginator>
-            <mat-list-item *ngFor="let track of music" class="track-item">
-              <h4 mat-line class="track-item-control">
-                <audio controls *ngFor="let file of track.files | async" class="audio-player">
-                  <source src={{file}} type="audio/mpeg">
-                  <p>Ваш браузер не поддерживает HTML5 audio. Воспользуйтесь
-                    <a href={{file}}>этой ссыклой</a></p>
-                </audio>
-              </h4>
-              <div mat-line class="track-title">
-                <div>
-                  {{track.title + ", " + track.artist + ", " + track.year}}
+            <ul *ngFor="let track of music" class="track-list">
+              <li class="track-item">
+                <h4 mat-line>
+                  <audio controls *ngFor="let file of track.files | async" class="audio-player">
+                    <source src={{file}} type="audio/mpeg">
+                    <p>Ваш браузер не поддерживает HTML5 audio. Воспользуйтесь
+                      <a href={{file}}>этой ссыклой</a></p>
+                  </audio>
+                </h4>
+                <div mat-line class="track-title">
+                  <div class="track__info">
+                    {{track.title + ", " + track.artist + ", " + track.year}}
+                  </div>
+                  <div class="track__control">
+                    <span class="item">Рейтинг: <b>{{track.rating}}</b></span>
+                  </div>
                 </div>
-                <div>
-                  <span class="item">Рейтинг: <b>{{track.rating}}</b></span>
-                </div>
-              </div>
-            </mat-list-item>
+              </li>
+            </ul>
           </mat-list>
           <span *ngIf="music.length === 0">На данный момент у пользователя нет музыки</span>
         </mat-tab>
