--- a/music-cloud-web/src/main/web/src/app/components/music/dialog/add-track-to-user-dialog.html
+++ b/music-cloud-web/src/main/web/src/app/components/music/dialog/add-track-to-user-dialog.html
@@ -1,7 +1,7 @@
-<h1 mat-dialog-title>Добавление</h1>
+<h1 mat-dialog-title class="modal-window-text-item">Добавление</h1>
 <div mat-dialog-content>
-    <p>Трек добавлен в вашу коллекцию!</p>
+    <p class="modal-window-text-item">Трек добавлен в вашу коллекцию!</p>
 </div>
-<div mat-dialog-actions>
+<div mat-dialog-actions class="modal-window-buttons">
     <button mat-raised-button color="warn" (click)="onYesClick()" cdkFocusInitial>Продолжить</button>
 </div>
