--- a/music-cloud-web/src/main/web/src/app/components/registration/dialog/create-user-dialog.html
+++ b/music-cloud-web/src/main/web/src/app/components/registration/dialog/create-user-dialog.html
@@ -1,9 +1,8 @@
-<h1 mat-dialog-title>Создание пользователя</h1>
+<h1 mat-dialog-title class="modal-window-text-item">Создание пользователя</h1>
 <div mat-dialog-content>
-    <p>Пользователь {{data.userDetails.firstName + " " + data.userDetails.lastName}}
-    создан успешно!</p>
+    <p class="modal-window-text-item">Пользователь {{data.userDetails.firstName + " " + data.userDetails.lastName}} создан успешно!</p>
 </div>
-<div mat-dialog-actions>
-    <button mat-raised-button color="primary" (click)="onNoClick()">Назад</button>
+<div mat-dialog-actions class="modal-window-buttons">
     <button mat-raised-button color="warn" (click)="onYesClick()" cdkFocusInitial>Перейти на страницу логина</button>
+    <button mat-raised-button color="primary" (click)="onNoClick()">Назад</button>
 </div>
