--- a/music-cloud-web/src/main/web/src/app/components/registration/dialog/error-create-user-dialog.html
+++ b/music-cloud-web/src/main/web/src/app/components/registration/dialog/error-create-user-dialog.html
@@ -1,8 +1,8 @@
-<h1 mat-dialog-title>Создание пользователя</h1>
+<h1 mat-dialog-title class="modal-window-text-item">Создание пользователя</h1>
 <div mat-dialog-content>
-    <p>Произошла ошибка</p>
-    <p>Причина : {{data.error.message}}</p>
+    <p class="modal-window-text-item">Произошла ошибка</p>
+    <p class="modal-window-text-item">Причина : {{data.error.message}}</p>
 </div>
-<div mat-dialog-actions>
+<div mat-dialog-actions class="modal-window-buttons">
     <button mat-button color="primary" (click)="onNoClick()" cdkFocusInitial>Назад</button>
 </div>
