--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -25,7 +25,7 @@
     <mat-list>
       <mat-tab-group>
         <mat-tab label="Обновления в текущей версии">
-          <label>Версия релиза 0.0.28 alpha 3</label><br>
+          <label>Версия релиза 0.0.29 alpha 3</label><br>
           <label>Обновления</label>
           <mat-list role="list">
             <mat-list-item role="listitem">Изменен интерфейс приложения, теперь он адаптирован под мобильные устройства</mat-list-item>
@@ -35,6 +35,7 @@
           <mat-list role="list">
             <mat-list-item role="listitem">Исправлено отображение контента на некоторых страницах</mat-list-item>
             <mat-list-item role="listitem">Исправлено отображение модальных окон на мобильных устройствах</mat-list-item>
+            <mat-list-item role="listitem">Исправлено ошибки консоли</mat-list-item>
           </mat-list>
         </mat-tab>
         <mat-tab label="Результаты тестирования рекомендательной системы">
