possibility of to add friends has been added

--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -30,6 +30,7 @@
           <mat-list role="list">
             <mat-list-item role="listitem">Изменен интерфейс приложения, теперь он адаптирован под мобильные устройства</mat-list-item>
             <mat-list-item role="listitem">Добавлены результаты расчета производительности рекомендательной системы</mat-list-item>
+            <mat-list-item role="listitem">Теперь вы можете добавлять других пользователей в друзья</mat-list-item>
           </mat-list>
           <label>Ошибки</label>
           <mat-list role="list">
