--- a/music-cloud-web/src/main/web/src/app/components/home/home.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/home/home.component.html
@@ -75,9 +75,29 @@
                     <span *ngIf="myPlaylists.length === 0">На данный момент у вас нет плейлистов</span>
                 </mat-tab>
                 <mat-tab label="Мои друзья">
+                    <mat-list>
+                        <mat-list-item *ngFor="let user of myFriends">
+                            <mat-icon mat-list-icon>account_circle</mat-icon>
+                            <h4 mat-line>{{showUserInfo(user)}}
+                                <mat-icon class="go-to-profile" (click)="gotoProfile(user.id)" mat-list-icon>arrow_forward_ios</mat-icon>
+                            </h4>
+                            <p mat-line *ngIf="user.userDetails.firstName !== null || user.userDetails.lastName !== null"> {{user.userDetails.nick}} </p>
+                        </mat-list-item>
+                    </mat-list>
                     <span *ngIf="myFriends.length === 0">Вы еще не добавили никого в друзья</span>
                 </mat-tab>
                 <mat-tab label="Запросы в друзья">
+                    <mat-list>
+                        <mat-list-item *ngFor="let user of myRequest">
+                            <mat-icon mat-list-icon>account_circle</mat-icon>
+                            <h4 mat-line>{{showUserInfo(user)}}
+                                <mat-icon class="go-to-profile" (click)="gotoProfile(user.id)" mat-list-icon>arrow_forward_ios</mat-icon>
+                                <mat-icon class="go-to-profile" (click)="addFriend(user)" mat-list-icon>add_box</mat-icon>
+                                <mat-icon class="go-to-profile" (click)="cancelFriendRequest(user)" mat-list-icon>remove_circle</mat-icon>
+                            </h4>
+                            <p mat-line *ngIf="user.userDetails.firstName !== null || user.userDetails.lastName !== null"> {{user.userDetails.nick}} </p><br>
+                        </mat-list-item>
+                    </mat-list>
                     <span *ngIf="myRequest.length === 0">Запросы отсутствуют</span>
                 </mat-tab>
                 <mat-tab label="Рекомендации">
