--- a/music-cloud-web/src/main/web/src/app/components/home/home.component.css
+++ b/music-cloud-web/src/main/web/src/app/components/home/home.component.css
@@ -51,6 +51,21 @@
     cursor: pointer;
 }
 
+.go-to-profile {
+    margin-top: 10px;
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+.modal-window-buttons {
+    display: flex;
+    justify-content: center;
+}
+
+.modal-window-text-item {
+    text-align: center;
+}
+
 @media screen and (min-width: 481px) {
     .home {
         display: flex;
