--- a/music-cloud-web/src/main/web/src/app/components/user-profile/user-profile.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/user-profile/user-profile.component.html
@@ -16,6 +16,10 @@
         <p>День рождения: {{user.userDetails.birthday.printDate()}}</p>
         <p>О пользователе: {{user.userDetails.about}}</p>
       </mat-card-content>
+      <mat-card-actions class="user-profile-buttons">
+        <button [disabled]="isFriend || isRequest" mat-raised-button color="primary" (click)="sendFriendRequest()">Добавить в друзья</button>
+        <button [disabled]="isRequest" mat-raised-button color="warn" (click)="removeFriend()">Удалить из друзей</button>
+      </mat-card-actions>
     </mat-card>
   </div>
   <div class="home__content">
