--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -25,12 +25,13 @@
     <mat-list>
       <mat-tab-group>
         <mat-tab label="Обновления в текущей версии">
-          <label>Версия релиза 0.0.29 alpha 3</label><br>
+          <label>Версия релиза 0.0.30 alpha 3</label><br>
           <label>Обновления</label>
           <mat-list role="list">
             <mat-list-item role="listitem">Изменен интерфейс приложения, теперь он адаптирован под мобильные устройства</mat-list-item>
             <mat-list-item role="listitem">Добавлены результаты расчета производительности рекомендательной системы</mat-list-item>
             <mat-list-item role="listitem">Теперь вы можете добавлять других пользователей в друзья</mat-list-item>
+            <mat-list-item role="listitem">Добавлено кеширование запросов</mat-list-item>
           </mat-list>
           <label>Ошибки</label>
           <mat-list role="list">
