user filters has been enabled

--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -25,10 +25,10 @@
     <mat-list>
       <mat-tab-group>
         <mat-tab label="Обновления в текущей версии">
-          <label>Версия релиза 0.0.31 alpha 3</label><br>
+          <label>Версия релиза 0.0.32 alpha 3</label><br>
           <label>Обновления</label>
           <mat-list role="list">
-            <mat-list-item role="listitem">Изменен интерфейс приложения, теперь он адаптирован под мобильные устройства</mat-list-item>
+            <mat-list-item role="listitem">Добавлена возможность поиска по пользователям</mat-list-item>
           </mat-list>
           <label>Ошибки</label>
           <mat-list role="list">
